force-app/main/default/objects/cgcloud__User_Setting__c/cgcloud__User_Setting__c.object-meta.xml
<CustomObject>
    <description>Object created for User Settings</description>
    <label>User Setting</label>
    <nameField>
        <displayFormat>US-{00000}</displayFormat>
        <label>User Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>