force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Current_Promotion_View__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Current_Promotion_View__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>View</label>
    <referenceTo>cgcloud__View__c</referenceTo>
    <relationshipLabel>User Settings (View)</relationshipLabel>
    <relationshipName>User_Settings1</relationshipName>
    <type>Lookup</type>
</CustomField>