force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Default_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>User Settings</relationshipLabel>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>