force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Default_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Management_Type__c</fullName>
    <label>Default Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>