force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Default_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Visit_Status__c</fullName>
    <label>Default Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>