force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Default_Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>User Settings</relationshipLabel>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>