force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Display_Considered_Promotions_Filter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Considered_Promotions_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag controls the visibility of &apos;Considered Promotions&apos; filter when the user opens the account plan filter.</description>
    <label>Display Considered Promotions Filter</label>
    <type>Checkbox</type>
</CustomField>