force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Display_Weekend__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to display the weekend in calendar view on the mobile app.</description>
    <label>Display Weekend</label>
    <type>Checkbox</type>
</CustomField>