force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Initial_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial_Time__c</fullName>
    <description>Defines the start time in the mobile app calendar.</description>
    <label>Initial Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>