force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Initial_View__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Initial_View__c</fullName>
    <label>Initial View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DayWithMap</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>