force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Landing_Page__c</fullName>
    <description>Sets the landing page on the mobile app.</description>
    <label>Landing Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MainMenu</fullName>
                <default>true</default>
                <label>Main Menu</label>
            </value>
            <value>
                <fullName>UserCockpit</fullName>
                <label>User Cockpit</label>
            </value>
            <value>
                <fullName>AdvancedUserCockpit</fullName>
                <label>Advanced User Cockpit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>