force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Mobile_Bluetooth_Device__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobile_Bluetooth_Device__c</fullName>
    <description>Determines the bluetooth device that you can use with the Consumer Goods Cloud Offline mobile app.</description>
    <inlineHelpText>Determines the bluetooth device that you can use with the Consumer Goods Cloud Offline mobile app.</inlineHelpText>
    <label>Bluetooth Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scanner</fullName>
                <default>true</default>
                <label>Scanner</label>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>