force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Order_Number_Of_Print_Outs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Number_Of_Print_Outs__c</fullName>
    <description>--- Attribute no longer used --- Order Number Of Print Outs.</description>
    <label>Order Number Of Print Outs</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>