force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Picture_Quality__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Picture_Quality__c</fullName>
    <description>Describes the picture quality of the attachment.</description>
    <label>Picture Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>M-Large</fullName>
            </value>
            <value>
                <fullName>H-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>