force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Route_In_Map__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Route_In_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to display routes in maps on the mobile app.</description>
    <label>Route In Map</label>
    <type>Checkbox</type>
</CustomField>