force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Should_Create_Tour_From_Route__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Create_Tour_From_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Let users create a tour using the Route feature in the mobile app.</description>
    <label>Create Tour From Route</label>
    <type>Checkbox</type>
</CustomField>