force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Show_Agenda_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Show_Agenda_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to display the agenda time.</description>
    <label>Show Agenda Time</label>
    <type>Checkbox</type>
</CustomField>