force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Show_Calendar_Week__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Show_Calendar_Week__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to show the calendar week.</description>
    <label>Show Calendar Week</label>
    <type>Checkbox</type>
</CustomField>