force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Sync_Time_Interval__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_Time_Interval__c</fullName>
    <description>Defines the background sync interval.</description>
    <label>Sync Time Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>