force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Traffic_In_Map__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Traffic_In_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle to show traffic data in maps on the mobile app.</description>
    <label>Traffic In Map</label>
    <type>Checkbox</type>
</CustomField>