force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Unique_User_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_User_Id__c</fullName>
    <description>To store User Id for uniqueness check</description>
    <label>Unique User Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>