force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the user record.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>