force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Work_Ends__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Work_Ends__c</fullName>
    <description>Time the user ceases to work.</description>
    <inlineHelpText>Valid Time format: hh:mm (valid range: 00:00 to 23:59)</inlineHelpText>
    <label>Work Ends</label>
    <length>5</length>
    <type>Text</type>
</CustomField>