force-app/main/default/objects/cgcloud__User_Setting__c/fields/cgcloud__Works_On_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Works_On_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user in general works on this day of the week. (E.g. used for capacity planning.)</description>
    <label>Works On Tuesday</label>
    <type>Checkbox</type>
</CustomField>