force-app/main/default/objects/cgcloud__User_Setting__c/validationRules/cgcloud__Initial_Time_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Initial_Time_Format_Validation</fullName>
    <active>true</active>
    <description>Please enter the correct format for Initial Time (hh:mm).</description>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(cgcloud__Initial_Time__c)),
    NOT(REGEX(cgcloud__Initial_Time__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Please enter the correct format for Initial Time (hh:mm).</errorMessage>
</ValidationRule>