force-app/main/default/objects/cgcloud__User_Setting__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>