force-app/main/default/objects/cgcloud__User_Setting__c/listViews/cgcloud__CGCloud_User_Settings.listView-meta.xml
<ListView>
    <fullName>cgcloud__CGCloud_User_Settings</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>User Settings</label>
    <language>en_US</language>
</ListView>